Fix spacing in code blocks in FF

--- a/css/common.css
+++ b/css/common.css
@@ -94,11 +94,11 @@ dd + dt {
   margin-block-start: 1em;
 }
 
-.Note * {
+:where(.Note *) {
   margin-block: 0;
 }
 
-.Note * + * {
+:where(.Note * + *) {
   margin-block-start: 1.5em;
 }
 
@@ -127,6 +127,10 @@ pre,
 
 pre {
   padding: 1em;
+}
+
+pre * {
+  margin-block-start: 0;
 }
 
 :not(pre) > code {
